[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/

authors = [
    {name = "Bharath Rao", email = "bharath.rao@hotmail.com"},
]

license = {text = "MIT"}
requires-python = ">=3.7,<4.0"
dependencies = []
name = "action_graph"
version = "0.1.0"
description = "Autonomous agent for task/action planning and execution"

[project.urls]
github = "https://github.com/bharathra/action_graph"

[project.optional-dependencies]

[tool.pdm]
includes = ["action_graph"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.5",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
