[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/

authors = [
    {name = "Bharath Achyutha Rao", email = "bharath.rao@hotmail.com"},
]

name = "action_graph"
version = "1.2.8"
description = "Autonomous agent for task/action planning and execution"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/bharathra/action_graph"
"Bug Tracker" = "https://github.com/bharathra/action_graph/issues"

[project.optional-dependencies]

[tool.pdm]
includes = ["action_graph"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<7.0.0,>=6.2.5",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
